# empty-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Cargo.toml.bak  Dockerfile  Dockerfile.blog  Dockerfile.lottery  README.md  build.rs  envoy.yaml  lottery.pb  lottery.swagger.json  protoc.sh  question.json  question.yaml
.cargo/: config.toml  (+1 more)
app/: Cargo.toml
app/src/: main.rs
auth/: Cargo.toml
auth/src/: lib.rs
auth/src/dao/: client.rs  config.rs  mod.rs  resource.rs  user.rs
auth/src/model/: config.rs  mod.rs  resource.rs
auth/src/service/: grpc.rs  mod.rs  state.rs
blog/: Cargo.toml  build.rs
blog/migrations/2023-04-02-111722_create_blogs/: down.sql  up.sql
blog/src/: dao.rs  lib.rs  model.rs  service.rs
blog/src/bin.bak/: blog.rs
empty-backend/: Cargo.toml  build.rs  r.rs
empty-backend/migrations/2022-09-22-032224_create_questions/: down.sql  up.sql
empty-backend/migrations/2022-10-04-083005_create_resources/: up.sql
empty-backend/migrations/2022-12-26-080725_create_clients/: down.sql  up.sql
empty-backend/src/: database.rs  demo.rs  errors.rs  lib.rs  main.rs  protos.rs  schema-model.rs  schema.rs  server.rs  service.rs  servicee.rs  services.rs
empty-backend/src/api/: mod.rs  oauth.rs  questions.rs
empty-backend/src/model/: mod.rs  oauth.rs  questions.rs  resources.rs  response.rs
empty-backend/src/openapi/: mod.rs  questions.rs  resources.rs
empty-backend/src/router/: mod.rs  questions.rs
empty-backend/src/service/: docs.rs  mod.rs
empty-backend/src/service/questions/: mod.rs
empty-backend/src/services/: docs.rs  mod.rs  questions.rs
empty-backend/src/services/questions/: dao.rs  mod.rs  model.rs  service.rs
empty-backend/src/utils/: timestamp.rs
empty-backend/tests/: add_orm_field.rs
empty-oauth/: .env  Cargo.toml  build.rs
empty-oauth/migrations/2023-03-14-134223_create_oauths/: down.sql  up.sql
empty-oauth/proto/: oauth.proto
empty-oauth/src/: controller.rs  lib.rs  model.rs  router.rs  schema-models.rs  schema.rs  service.rs  state.rs
empty-oauth/tests/: register.rs
empty-oauth/tests_bak/: register.rs
empty-register/: .env  Cargo.toml  build.rs  register.proto
empty-register/proto/: register.proto
empty-register/src/: client.rs  lib.rs  server.rs
empty-registry/: .env  Cargo.toml  build.rs
empty-registry/migrations/2023-02-28-141426_create_micro_services/: down.sql  up.sql
empty-registry/proto/: heartbeat.proto  registry.proto
empty-registry/src/: client.rs  heartbeat.rs  lib.rs  proxy.rs  registry.rs  schema.rs  server.rs
empty-registry/src/registry/: model.rs  service.rs
empty-template/: Cargo.toml  build.rs
empty-template/proto/: template.proto
empty-template/src/: lib.rs
empty-template/tests/: register.rs
empty-user/: .env  Cargo.toml  build.rs  diesel.toml
empty-user/migrations/2023-01-17-094950_create_clients/: up.sql
empty-user/migrations/2023-03-28-131241_create_users/: down.sql  up.sql
empty-user/proto/: user.proto
empty-user/src/: lib.rs  schema.rs  service.rs
empty-user/src/model/: access_token.rs  info.rs  mod.rs  refresh_token.rs  scope.rs  token.rs
empty-utils/: Cargo.toml
empty-utils/src/: convert.rs  errors.rs  lib.rs
empty-utils/src/cmd/: cmd.rs
empty-utils/src/diesel/: db.rs  mod.rs  timestamp.rs
empty-utils/src/schema/: parse.rs
empty-utils/src/tonic/: mod.rs  timestamp.rs  uuid.rs
empty-utils/tests/: hello.rs
lottery/: .env  Cargo.toml  build.rs  demoo.rs  diesel.toml
lottery/migrations/2023-05-24-130629_create_lotterys/: down.sql  up.sql
lottery/proto/: lottery.proto  oauth.proto  paginate.proto  record.proto  record.swagger.json  risk.proto  user.proto  wx.proto
lottery/proto/proto/: lottery.proto  paginate.proto  record.proto  user.proto
lottery/src/: demo.rs  lib.rs  model.rs  pb.rs  schema.patch  schema.rs  service.rs  temp.rs  types.rs
lottery/src/configs/: mod.rs
lottery/src/dao/: favorite.rs  lottery.rs  mod.rs  record.rs  template.rs
lottery/src/model/: lottery.rs  mod.rs  record.rs  user.rs  wx.rs
lottery/src/model/oauth/: diesel.rs  endpoint.rs  mod.rs  solicitor.rs
lottery/src/service/: favorite.rs  lottery.rs  mod.rs  record.rs  template.rs  user.rs  wx.rs
lottery/src/service/oauth/: handler.rs  mod.rs  service.rs  state.rs
lottery/src/types/: lottery.rs  mod.rs  oauth.rs
lottery/src/utils/: asyncauth.rs  diesel.rs  mod.rs  wx.rs
oauth/: Cargo.toml  build.rs
oauth/migrations/2023-05-24-130629_create_lotterys/: up.sql
oauth/src/: endpoint.rs  handler.rs  lib.rs  state.rs
oauth/src/dao/: mod.rs
oauth/src/dao/endpoint/: extension.rs  mod.rs
oauth/src/dao/grpc/: request.rs
oauth/src/model/: diesel.rs  endpoint.rs  mod.rs  solicitor.rs
oauth/src/primitives/: authorizer.rs  issuer.rs  registrar.rs
oauth/src/service/: handler.rs  mod.rs  service.rs  state.rs
proto/: Cargo.toml  build.rs
proto/migrations/auth/: .env  diesel.toml
proto/migrations/blog/: .env  diesel.toml
proto/migrations/lottery/: .env  diesel.toml
proto/migrations/oauth/: .env  diesel.toml
proto/migrations/oss/: .env  diesel.toml
proto/migrations/user/: .env  diesel.toml
proto/migrations/websocket/: .env  diesel.toml
proto/migrations/wx/: .env  diesel.toml
proto/openapi/blog/: blog.swagger.json
proto/proto/: protoc.sh
proto/proto/auth/: auth.proto
proto/proto/blog/: blog.pb  blog.proto
proto/proto/file/: file.pb  file.proto
proto/proto/health/: department.proto  hospital.proto  nurse.proto  patient.proto
proto/proto/lottery/: favorite.proto  lottery.proto  record.proto  template.proto
proto/proto/oauth/: client.proto  oauth.proto
proto/proto/oss/: oss.proto
proto/proto/user/: auth.proto  user.proto
proto/proto/utils/: paginate.proto
proto/proto/websocket/: client.proto
proto/proto/wx/: user.proto  wx.proto
proto/src/: lib.rs  pb.rs
proto/src/model/: auth.rs  mod.rs  oauth.rs  wx.rs
proto/src/schema/: auth.rs  blog.rs  lottery.rs  mod.rs  oauth.rs  oss.rs  user.rs  websocket.rs  wx.rs
proto/src/types/: auth.rs  mod.rs  oauth.rs  user.rs
proto/src/utils/: diesel.rs
(+102 files in other folders)
