[workspace]
members = [
    "empty-backend",
    "empty-backend-openapi",
    "empty-utils",
    "empty-macro",
    "empty-user",
    "empty-registry",
    "empty-template",
    "empty-oauth",
    "database",
    "proto",
    "blog",
    "file",
    "lottery",
    "oauth",
    "app",
]

[workspace.dependencies]

# common
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
anyhow = "1.0"
lazy_static ="1.4"
log = "0.4"
tracing="0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
# TODO: remove
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
regex = "1.9"

# database
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid= { version = "1.4", features = ["serde", "v4"] }
dotenvy = "0.15"
diesel_cli_ext="0.3"

# grpc
tonic = "0.9"
prost = "0.11"
tonic-health = "0.9"
prost-types = "0.11"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tonic-build = "0.9"
prost-build = "0.11"
hyper = "0.14"
tower = "0.4"

# oauth
oxide-auth = "0.5"
oxide-auth-async = "0.1"
oxide-auth-axum = "0.3"
axum-macros = "0.3"
url = "2.4"

prost-wkt = "0.4"
prost-wkt-types = "0.4"

# rustful
axum = { version = "0.6", features = ["http2"] }
actix-web = "4.3"
utoipa = {version = "3.4", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui ={version =  "3.1", features = ["axum"] }



empty-registry = { path="empty-registry" }
empty-utils = {path = "empty-utils"}
empty-macro = { path="empty-macro" }
lottery = { path="lottery" }
proto = { path="proto" }

# micro
syn = "2.0"
quote = "1.0"
proc-macro2="1.0"
convert_case = "0.6"

#tests
tempfile ="3.7"
