[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
log = {workspace = true}
axum = {workspace = true}
tower-http = { workspace = true, features = ["cors", "trace", "compression-br", "compression-gzip","set-header", "auth"] }

blog = {workspace = true}
lottery = {workspace = true}
oauth = {workspace = true}
config = {workspace = true}
proto = {workspace = true}
empty-utils = {workspace = true}

