[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = {workspace = true, features = ["serde"] }
uuid= { workspace = true, features = ["serde"] }
regex =  { workspace = true }
rand =  { workspace = true }

tonic = { workspace = true }

empty-utils = { workspace = true }
proto = { workspace = true }
async-trait =  { workspace = true }
config =  { workspace = true }

prost = {workspace = true}
prost-types = {workspace = true}