[package]
name = "empty_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
futures = "0.3"
utoipa = {version = "2.1", features = ["actix_extras"] }
utoipa-swagger-ui ={version =  "2.0", features = ["actix-web"] }
diesel = { version = "2.0", features = ["postgres", "r2d2"] }

