[package]
name = "empty_backend"
version = "0.1.0"
edition = "2021"
authors = ["yyue <yy@yyue.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
utoipa = {version = "2.4", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui ={version =  "3.0", features = ["axum"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid= { version = "1.2", features = ["serde"] }

axum = { version = "0.6", features = ["http2"] }
tokio = {version = "1.23", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
tower-http = { version = "0.3", features = ["cors", "trace"] }
oxide-auth = "0.5"
oxide-auth-axum = "0.3.0"


empty_macro = { path="../empty-macro" }

[[bin]]
name="openapi"

[[bin]]
name="server"

[[bin]]
name="server-axum"

