[package]
name = "empty-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid= { version = "1.2", features = ["serde", "v4"] }
dotenvy = "0.15"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic-health = "*"
empty-utils = {path = "../empty-utils"}
log = "0.4"
prost-types = "*"
lazy_static ="*"
tracing="*"
tower-http = { version = "*", features = ["cors", "trace"] }


[build-dependencies]
tonic-build = "0.8"


[[bin]]
name="empty-registry"
[[bin]]
name="empty-registry-client"