[package]
name = "empty-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { workspace = true, features = ["serde"] }
uuid= { workspace = true, features = ["serde", "v4"] }
dotenvy = {workspace = true}
tonic = {workspace = true}
prost = {workspace = true}
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic-health = {workspace = true}
empty-utils = {workspace = true}
log = {workspace = true}
prost-types = {workspace = true}
lazy_static = {workspace = true}
tracing={workspace = true}
axum={workspace = true, features = ["http2"]}
tower-http = { version = "*", features = ["cors", "trace"] }
hyper = { workspace = true , features = ["http2"]} 
tower={workspace=true}


[build-dependencies]
tonic-build = {workspace = true}


[[bin]]
name="empty-registry"
[[bin]]
name="empty-registry-client"