[package]
name = "empty-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
log = {workspace = true}

tonic = {workspace = true}
prost = {workspace = true}
hyper = {workspace = true}
empty-registry = {workspace = true}
empty-utils = {workspace = true}
tokio-stream = {version = "*", features = ["net"]}


[build-dependencies]
tonic-build = {workspace = true}


[[bin]]
name="empty-template"