[package]
name = "empty-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {workspace = true}
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid"] }
serde = { workspace = true, features = ["derive"] }
chrono = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
log = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy ={workspace = true}
clap = { workspace = true, features = ["derive"] }
walkdir = {workspace = true}
cargo_toml = {workspace = true}
toml = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
hyper = {workspace = true}
tower-http = {workspace = true, features = ["trace","sensitive-headers"]}
uuid= { workspace = true }

oxide-auth = { workspace = true }
oxide-auth-axum = { workspace = true }

[[bin]]
name = "cli"

