[package]
name = "lottery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
serde_qs = {workspace = true}
log = {workspace = true}
utoipa = {workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui ={workspace = true, features = ["axum"] }
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = {workspace = true, features = ["serde"] }
uuid= { workspace = true, features = ["serde"] }
dotenvy = {workspace = true}
async-trait =  { workspace = true }
http =  { workspace = true }
regex =  { workspace = true }
rand = { workspace = true }


tonic = { workspace = true }
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
tracing ={workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = {workspace = true}
hyper = {workspace = true}
tower = {workspace = true}
tower-http = { workspace = true, features = ["cors", "trace", "compression-br", "compression-gzip","set-header", "auth"] }


empty-utils = { workspace = true }
proto = { workspace = true }

prost = {workspace = true}
prost-types = {workspace = true}

oxide-auth = {workspace = true}
oxide-auth-async = {workspace = true}
oxide-auth-axum = {workspace = true}
url = {workspace = true}
axum = {workspace = true}

reqwest = { workspace = true, features = ["json"] }

futures-util="*"

[build-dependencies]
tonic-build = {workspace = true}