[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
serde = { workspace = true, features = ["derive"] }
utoipa = {workspace = true }
diesel = { workspace = true }
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }

empty-utils = { workspace = true }

[build-dependencies]
tonic-build = {workspace = true}